# backend/hollow/openapi.yaml
@@ -11,7 +11,7 @@ paths:
             tags:
                 - Forests
             description: Push a Leaf
-            operationId: Forests_Push
+            operationId: Forests_PushLeaf
             requestBody:
                 content:
                     application/json:
@@ -30,7 +30,7 @@ paths:
             tags:
                 - Forests
             description: Get Leafs
-            operationId: Forests_Get
+            operationId: Forests_GetForest
             parameters:
                 - name: page
                   in: query
@@ -49,7 +49,61 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/forest.v1.GetLeafsReply'
-    /api/forest/{root}:
+    /api/forest/comments/{id}:
+        delete:
+            tags:
+                - Forests
+            description: Delete Comment
+            operationId: Forests_DeleteComment
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/forest.v1.DeleteCommentReply'
+    /api/forest/comments/{root}:
+        get:
+            tags:
+                - Forests
+            description: Get Comments
+            operationId: Forests_GetComments
+            parameters:
+                - name: root
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int64
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: pagesize
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: father
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/forest.v1.GetCommentsReply'
         post:
             tags:
                 - Forests
@@ -75,6 +129,45 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/forest.v1.CommentLeafRePly'
+    /api/forest/{id}:
+        get:
+            tags:
+                - Forests
+            description: Get Leaf Detail
+            operationId: Forests_GetLeafDetail
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/forest.v1.GetLeafDetailReply'
+        delete:
+            tags:
+                - Forests
+            description: Delete a Leaf
+            operationId: Forests_DeleteLeaf
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/forest.v1.DeleteLeafReply'
     /api/user/login:
         post:
             tags:
@@ -115,6 +208,29 @@ paths:
                                 $ref: '#/components/schemas/user.v1.RegisterUserReply'
 components:
     schemas:
+        forest.v1.Comment:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                owner:
+                    type: integer
+                    format: int64
+                root:
+                    type: integer
+                    format: int64
+                father:
+                    type: integer
+                    format: int64
+                createdAt:
+                    type: integer
+                    format: int64
+                status:
+                    type: integer
+                    format: int64
+                message:
+                    type: string
         forest.v1.CommentLeafRePly:
             type: object
             properties:
@@ -137,6 +253,42 @@ components:
                 father:
                     type: integer
                     format: int64
+        forest.v1.DeleteCommentReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int64
+                msg:
+                    type: string
+        forest.v1.DeleteLeafReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int64
+                msg:
+                    type: string
+        forest.v1.GetCommentsReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int64
+                msg:
+                    type: string
+                data:
+                    $ref: '#/components/schemas/forest.v1.MultipleCommentReply'
+        forest.v1.GetLeafDetailReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int64
+                msg:
+                    type: string
+                data:
+                    $ref: '#/components/schemas/forest.v1.Leaf'
         forest.v1.GetLeafsReply:
             type: object
             properties:
@@ -146,7 +298,7 @@ components:
                 msg:
                     type: string
                 data:
-                    $ref: '#/components/schemas/forest.v1.MultipleTodoReply'
+                    $ref: '#/components/schemas/forest.v1.MultipleLeafReply'
         forest.v1.Leaf:
             type: object
             properties:
@@ -158,13 +310,26 @@ components:
                     format: int64
                 message:
                     type: string
-                createAt:
+                createdAt:
                     type: integer
                     format: int64
                 status:
                     type: integer
                     format: int64
-        forest.v1.MultipleTodoReply:
+                liked:
+                    type: integer
+                    format: int64
+        forest.v1.MultipleCommentReply:
+            type: object
+            properties:
+                list:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/forest.v1.Comment'
+                total:
+                    type: integer
+                    format: int64
+        forest.v1.MultipleLeafReply:
             type: object
             properties:
                 list:
